--- a/src/main/resources/fxml/asd.fxml
+++ b/src/main/resources/fxml/asd.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controller.SceneSwitcher"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="Controller.MenuController.asdController"
+            prefHeight="200.0" prefWidth="200.0">
 
 </AnchorPane>
