--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="Controller.MenuController.asdController"/>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MenuController.MainMenuController">
+   <children>
+     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+       <menus>
+         <Menu mnemonicParsing="false" text="Log in or Register">
+           <items>
+             <MenuItem mnemonicParsing="false" onAction="#login" text="Log In" />
+             <MenuItem mnemonicParsing="false" onAction="#registerBuyer" text="Register Buyer" />
+             <MenuItem mnemonicParsing="false" onAction="#registerSeller" text="Register Seller" />
+             <MenuItem mnemonicParsing="false" onAction="#registerAdmin" text="Register Admin" />
+           </items>
+         </Menu>
+       </menus>
+     </MenuBar>
+   </children>
+</Pane>
