--- a/src/main/resources/fxml/BuyerRegisterMenu.fxml
+++ b/src/main/resources/fxml/BuyerRegisterMenu.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MenuController.LoginRegisterController.BuyerRegisterController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.BuyerRegisterController">
    <children>
       <ComboBox fx:id="roleChooser" layoutX="118.0" layoutY="53.0" onMouseClicked="#comboBoxPressed" prefWidth="150.0" />
       <Label layoutX="68.0" layoutY="57.0" prefHeight="17.0" prefWidth="24.0" text="job" />
