--- a/src/main/resources/fxml/ManageUsers.fxml
+++ b/src/main/resources/fxml/ManageUsers.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.LoginRegisterController.LoginMenuController"
-            prefHeight="720.0" prefWidth="1280.0">
+            fx:controller="View.Menus.MenuController.AdminMenu.ManageUsers"
+            prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
