--- a/src/main/resources/fxml/SellerRegisterMenu.fxml
+++ b/src/main/resources/fxml/SellerRegisterMenu.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MenuController.LoginRegisterController.SellerRegisterController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.SellerRegisterController">
    <children>
       <ComboBox fx:id="roleChooser" layoutX="125.0" layoutY="35.0" prefWidth="150.0" onMouseClicked="#comboBoxPressed"/>
       <Label layoutX="77.0" layoutY="39.0" text="Job-Seller" />
