--- a/src/main/resources/fxml/AdminMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu.fxml
@@ -7,19 +7,18 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AdminMenuController">
     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
-            <Menu mnemonicParsing="false" text="back">
-
-            </Menu>
-            <Menu mnemonicParsing="false" text="logout">
-
+            <Menu mnemonicParsing="false" text="option">
+             <MenuItem mnemonicParsing="false" text="back" onAction="#back" ></MenuItem>
+                <MenuItem mnemonicParsing="false" text="logout" onAction="#logout"></MenuItem>
             </Menu>
         </menus>
     </MenuBar>
-    <Button layoutX="21.0" layoutY="133.0" prefHeight="27.0" prefWidth="148.0" text="manage users" onMouseClicked="#manageUsers">  </Button>
-    <Button layoutX="21.0" layoutY="77.0" text="manage discount codes" onMouseClicked="#manageDiscountCodes">  </Button>
-    <Button layoutX="217.0" layoutY="200.0" prefHeight="27.0" prefWidth="169.0" text="manage requests" onMouseClicked="#manageRequests">  </Button>
-    <Button layoutX="217.0" layoutY="133.0" prefHeight="27.0" prefWidth="169.0" text="manage products" onMouseClicked="#manageProducts"/>
-    <Button layoutX="217.0" layoutY="77.0" prefHeight="27.0" prefWidth="169.0" text="manage categories" onMouseClicked="#manageCategories" />
-    <Button layoutX="21.0" layoutY="200.0" prefHeight="27.0" prefWidth="148.0" text="view personal info" > </Button>
+    <Button layoutX="21.0" layoutY="133.0" onMouseClicked="#manageUsers" prefHeight="27.0" prefWidth="148.0" text="manage users">  </Button>
+    <Button layoutX="21.0" layoutY="77.0" onMouseClicked="#manageDiscountCodes" text="manage discount codes">  </Button>
+    <Button layoutX="217.0" layoutY="200.0" onMouseClicked="#manageRequests" prefHeight="27.0" prefWidth="169.0" text="manage requests">  </Button>
+    <Button layoutX="217.0" layoutY="133.0" onMouseClicked="#manageProducts" prefHeight="27.0" prefWidth="169.0" text="manage products" />
+    <Button layoutX="217.0" layoutY="77.0" onMouseClicked="#manageCategories" prefHeight="27.0" prefWidth="169.0" text="manage categories" />
+    <Button layoutX="21.0" layoutY="200.0" prefHeight="27.0" prefWidth="148.0" text="view personal info"> </Button>
+    <Button layoutX="21.0" layoutY="253.0" prefHeight="27.0" prefWidth="148.0" text="create admin profile" />
    <ImageView fitHeight="146.0" fitWidth="200.0" layoutX="427.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
 </AnchorPane>
