--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.asdController"
+            fx:controller="View.Menus.MenuController.ShopMenuController"
             prefHeight="720.0" prefWidth="1280.0">
 
 </AnchorPane>
