--- a/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
@@ -4,8 +4,6 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageRequests">
-   <children>
-      <ListView layoutY="36.0" prefHeight="283.0" prefWidth="502.0" />
-       <Button text="back" fx:id="#back"/>
-   </children>
+    <Button text="back" onMouseClicked="#back"></Button>
+      <ListView layoutY="36.0" prefHeight="283.0" prefWidth="502.0" fx:id="listView"/>
 </AnchorPane>
