--- a/src/main/resources/fxml/BuyerRegisterMenu.fxml
+++ b/src/main/resources/fxml/BuyerRegisterMenu.fxml
@@ -6,8 +6,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.BuyerRegisterController">
    <children>
-      <ComboBox fx:id="roleChooser" layoutX="118.0" layoutY="53.0" onMouseClicked="#comboBoxPressed" prefWidth="150.0" />
-      <Label layoutX="68.0" layoutY="57.0" prefHeight="17.0" prefWidth="24.0" text="job" />
+      
       <Label layoutX="45.0" layoutY="112.0" text="Username" />
       <TextField fx:id="usernameTextField" layoutX="118.0" layoutY="108.0" prefWidth="150.0" />
       <Label layoutX="46.0" layoutY="173.0" prefHeight="17.0" prefWidth="53.0" text="Password" />
@@ -22,7 +21,7 @@
       <TextField fx:id="emailTextField" layoutX="119.0" layoutY="416.0" />
       <Label layoutX="19.0" layoutY="495.0" prefHeight="17.0" prefWidth="84.0" text="phoen number" />
       <TextField fx:id="numberTextField" layoutX="119.0" layoutY="491.0" />
-      <CheckBox fx:id="passwordCheckBox" layoutX="277.0" layoutY="173.0" mnemonicParsing="false"  text="Show password?" />
+      <CheckBox fx:id="passwordCheckBox" layoutX="277.0" layoutY="173.0" mnemonicParsing="false" text="Show password?" />
       <Button layoutX="277.0" layoutY="557.0" mnemonicParsing="false" onAction="#fileChooserOpen" text="....." />
       <Label layoutX="45.0" layoutY="561.0" text="Image" />
       <Button layoutX="118.0" layoutY="599.0" mnemonicParsing="false" onAction="#register" prefHeight="45.0" prefWidth="150.0" text="Register" />
@@ -35,5 +34,23 @@
       <Label fx:id="emailLabel" layoutX="118.0" layoutY="441.0" prefHeight="17.0" prefWidth="150.0" />
       <Label fx:id="phoneNumberLabel" layoutX="119.0" layoutY="516.0" prefHeight="17.0" prefWidth="149.0" />
       <TextField fx:id="passwordTextField" layoutX="119.0" layoutY="169.0" />
+      <Button layoutY="27.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="102.0" text="Back" />
+      <MenuBar layoutY="2.0" prefHeight="25.0" prefWidth="692.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Loign or Register">
+            <items>
+                  <MenuItem mnemonicParsing="false" onAction="#mainMenu" text="Main" />
+                  <MenuItem mnemonicParsing="false" onAction="#login" text="Login" />
+                  <MenuItem mnemonicParsing="false" onAction="#registerSeller" text="Register Seller" />
+              <MenuItem mnemonicParsing="false" onAction="#Exit" text="Exit" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </children>
 </Pane>
