--- a/src/main/resources/fxml/LoginMenu.fxml
+++ b/src/main/resources/fxml/LoginMenu.fxml
@@ -6,9 +6,32 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.LoginRegisterController.LoginMenuController"
-            prefHeight="720.0" prefWidth="1280.0">
-
-</AnchorPane>
+<Pane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.LoginMenuController">
+   <children>
+      <MenuBar prefHeight="25.0" prefWidth="612.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="Login or Register">
+            <items>
+                  <MenuItem mnemonicParsing="false" onAction="#mainMenu" text="Main" />
+                  <MenuItem mnemonicParsing="false" onAction="#registerBuyer" text="Buyer Register" />
+                  <MenuItem mnemonicParsing="false" onAction="#registerSeller" text="Seller Register" />
+              <MenuItem mnemonicParsing="false" onAction="#Exit" text="Exit" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <TextField fx:id="usernameTextField" layoutX="205.0" layoutY="127.0" />
+      <TextField fx:id="passwordTextField" layoutX="205.0" layoutY="261.0" />
+      <CheckBox fx:id="passwordCheckBox" layoutX="354.0" layoutY="265.0" mnemonicParsing="false" text="Show Password?" />
+      <Label layoutX="145.0" layoutY="131.0" text="username" />
+      <Label layoutX="145.0" layoutY="265.0" text="password" />
+      <Button layoutX="211.0" layoutY="348.0" mnemonicParsing="false" onAction="#login" prefHeight="51.0" prefWidth="141.0" text="Login" />
+      <PasswordField fx:id="passwordField" layoutX="205.0" layoutY="261.0" />
+      <Label fx:id="errorLabel" layoutX="206.0" layoutY="309.0" prefHeight="17.0" prefWidth="149.0" />
+   </children>
+</Pane>
