--- a/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
@@ -5,5 +5,5 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageRequests">
     <Button text="back" onMouseClicked="#back"></Button>
-      <ListView layoutY="36.0" prefHeight="283.0" prefWidth="502.0" fx:id="listView"/>
+      <ListView layoutY="36.0" prefHeight="283.0" prefWidth="502.0" fx:id="listView" onMouseClicked="#requestSelect"/>
 </AnchorPane>
