--- a/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
@@ -8,8 +8,8 @@
     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
             <Menu mnemonicParsing="false" text="option">
-             <MenuItem mnemonicParsing="false" text="back" onAction="#back" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="logout" onAction="#logout"></MenuItem>
+             <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+                <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
             </Menu>
         </menus>
     </MenuBar>
@@ -19,6 +19,7 @@
     <Button layoutX="217.0" layoutY="133.0" onMouseClicked="#manageProducts" prefHeight="27.0" prefWidth="169.0" text="manage products" />
     <Button layoutX="217.0" layoutY="77.0" onMouseClicked="#manageCategories" prefHeight="27.0" prefWidth="169.0" text="manage categories" />
     <Button layoutX="21.0" layoutY="200.0" prefHeight="27.0" prefWidth="148.0" text="view personal info"> </Button>
+    <Button layoutX="217.0" layoutY="253.0" prefHeight="27.0" prefWidth="169.0" text="add discount code" onMouseClicked="#addDiscountCode" />
     <Button layoutX="21.0" layoutY="253.0" prefHeight="27.0" prefWidth="148.0" text="create admin profile" />
    <ImageView fitHeight="146.0" fitWidth="200.0" layoutX="427.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
 </AnchorPane>
