--- a/src/main/resources/fxml/AdminMenu/EditDiscountCode.fxml
+++ b/src/main/resources/fxml/AdminMenu/EditDiscountCode.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.AdminMenu.EditDiscountCode"
+            fx:controller="View.Menus.MenuController.AdminMenu.EditDiscountCode"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
