--- a/src/main/resources/fxml/AdminMenu/ManageRequestIn.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageRequestIn.fxml
@@ -7,5 +7,9 @@
     <Button layoutX="249.0" layoutY="118.0" onMouseClicked="#accept" prefHeight="27.0" prefWidth="113.0" text="accept" />
     <Button layoutX="28.0" layoutY="118.0" onMouseClicked="#decline" prefHeight="27.0" prefWidth="113.0" text="decline" />
     <TextField  editable="false"  fx:id="detail" layoutX="31.0" layoutY="39.0" prefHeight="73.0" prefWidth="333.0" />
-    <Button layoutX="3.0" layoutY="1.0" onMouseClicked="#exit" prefHeight="27.0" prefWidth="51.0" text="exit" />
+    <MenuBar >
+        <Menu text="options">
+            <MenuItem text="back" onAction="#exit"></MenuItem>
+        </Menu>
+    </MenuBar>
 </AnchorPane>
