--- a/src/main/resources/fxml/AdminMenu/AddDiscountCode.fxml
+++ b/src/main/resources/fxml/AdminMenu/AddDiscountCode.fxml
@@ -4,7 +4,11 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AddDiscountCode">
-            <Button onMouseClicked="#back" text="back" />
+    <MenuBar >
+        <Menu text="options">
+            <MenuItem text="back" onAction="#back"></MenuItem>
+        </Menu>
+    </MenuBar>
             <Label layoutX="55.0" layoutY="31.0" prefHeight="17.0" prefWidth="48.0" text="percent:" />
             <TextField fx:id="percent" layoutX="111.0" layoutY="26.0" onKeyReleased="#updatePercent" />
 
