--- a/src/main/resources/fxml/AdminMenu/ManageUsers.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageUsers.fxml
@@ -10,5 +10,9 @@
     <CheckBox fx:id="adminCheck" layoutX="217.0" layoutY="37.0" onMouseClicked="#update" selected="true" text="Admin"> </CheckBox>
     <Label layoutX="14.0" layoutY="38.0" text="show:" />
    <ListView fx:id="listView" layoutX="13.0" layoutY="85.0" prefHeight="265.0" prefWidth="266.0" onMouseClicked="#userSelect"  />
-    <Button text="back" onMouseClicked="#back"></Button>
+    <MenuBar >
+        <Menu text="options">
+            <MenuItem text="back" onAction="#back"></MenuItem>
+        </Menu>
+    </MenuBar>
 </AnchorPane>
