--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -14,6 +14,7 @@
              <MenuItem mnemonicParsing="false" onAction="#registerSeller" text="Register Seller" />
            </items>
          </Menu>
+         <Menu text="user zone"></Menu>
        </menus>
      </MenuBar>
      <Button layoutX="80.0" layoutY="133.0" mnemonicParsing="false" onAction="#userzone" text="user zone" />
