--- a/src/main/resources/fxml/SellerMenu/SellerEditItemMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerEditItemMenu.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SellerMenuController.SellerManageProductsMenu"
+            fx:controller="View.Menus.MenuController.SellerMenuController.SellerEditItemMenu"
             prefHeight="720.0" prefWidth="1280.0">
 
     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
