--- a/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerSalesHistory.fxml
@@ -11,4 +11,14 @@
             fx:controller="View.Menus.MenuController.SellerMenuController.SellerSalesHistory"
             prefHeight="1280.0" prefWidth="720.0">
 
+    <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+        <menus>
+            <Menu mnemonicParsing="false" text="option">
+
+                <MenuItem mnemonicParsing="false" text="back" onAction="#back" ></MenuItem>
+                <MenuItem mnemonicParsing="false" text="logout" onAction="#logout"></MenuItem>
+            </Menu>
+        </menus>
+    </MenuBar>
+
 </AnchorPane>
