--- a/src/main/resources/fxml/AdminMenu/AddDiscountCode.fxml
+++ b/src/main/resources/fxml/AdminMenu/AddDiscountCode.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AddDiscountCode">
-    <MenuBar >
+    <MenuBar>
         <Menu text="options">
-            <MenuItem text="back" onAction="#back"></MenuItem>
+            <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
             <Label layoutX="55.0" layoutY="31.0" prefHeight="17.0" prefWidth="48.0" text="percent:" />
@@ -28,6 +28,8 @@
 
              <Button layoutX="111.0" layoutY="246.0" onMouseClicked="#create" prefHeight="27.0" prefWidth="161.0" text="create code"> </Button>
              <Button layoutX="111.0" layoutY="290.0" onMouseClicked="#reset" prefHeight="27.0" prefWidth="161.0" text="reset" />
-             <ListView fx:id="userList" onMouseClicked="#selectUser" layoutX="316.0" layoutY="25.0" prefHeight="291.0" prefWidth="248.0" />
-
+             <ListView fx:id="userList" layoutX="316.0" layoutY="25.0" onMouseClicked="#selectUser" prefHeight="291.0" prefWidth="183.0" />
+             <ListView fx:id="selectedUserList" layoutX="510.0" layoutY="25.0" prefHeight="291.0" prefWidth="183.0" />
+             <Label layoutX="316.0" layoutY="326.0" text="please select discount code users" />
+              <Label layoutX="587.0" layoutY="326.0" text="users" />
 </AnchorPane>
