--- a/src/main/resources/fxml/AdminMenu/ManageCategories.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageCategories.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageCategories">
-            <ListView layoutX="14.0" layoutY="41.0" prefHeight="345.0" prefWidth="286.0"> </ListView>
+            <ListView layoutX="14.0" layoutY="41.0" prefHeight="345.0" prefWidth="286.0" fx:id="categoryList" onMouseClicked="#categorySelect"> </ListView>
             <MenuBar >
                 <Menu text="options">
                     <MenuItem text="back" onAction="#back"></MenuItem>
