--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController"
-            prefHeight="720.0" prefWidth="1280.0">
-    <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
-        <menus>
-            <Menu mnemonicParsing="false" text="option">
-                <MenuItem mnemonicParsing="false" text="Manage Products" onAction="#manageProducts" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="Add Product" onAction="#addProduct" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="View Sales History" onAction="#viewSalesHistory" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="Shop" onAction="#viewShop" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="Discounts" onAction="#viewDiscounts" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="back" onAction="#back" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="logout" onAction="#logout"></MenuItem>
-            </Menu>
-        </menus>
-    </MenuBar>
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController">
+   <children>
+       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+           <menus>
+               <Menu mnemonicParsing="false" text="option">
+                  <items>
+                      <MenuItem mnemonicParsing="false" onAction="#manageProducts" text="Manage Products" />
+                      <MenuItem mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
+                      <MenuItem mnemonicParsing="false" onAction="#viewSalesHistory" text="View Sales History" />
+                      <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
+                      <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
+                      <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+                      <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
+                  </items>
+               </Menu>
+           </menus>
+       </MenuBar>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" fx:id="sellerImage" />
+   </children>
 
 </AnchorPane>
