added error label to SellerManageProductsMenu.fxml

--- a/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
@@ -19,5 +19,6 @@
    <Label layoutX="389.0" layoutY="84.0" prefHeight="33.0" prefWidth="101.0" text="Your Items:" />
    <TextField fx:id="itemTextField" layoutX="389.0" layoutY="615.0" prefHeight="25.0" prefWidth="169.0" promptText="Enter an Item ID" />
    <Button layoutX="569.0" layoutY="615.0" mnemonicParsing="false" onAction="#manageProduct" text="Manage" />
+   <Label fx:id="manageError" layoutX="640.0" layoutY="619.0" prefHeight="17.0" prefWidth="253.0" />
 
 </AnchorPane>
