--- a/src/main/resources/fxml/LoginMenu.fxml
+++ b/src/main/resources/fxml/LoginMenu.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.LoginMenuController">
+<Pane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.LoginMenuController">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="1280.0">
         <menus>
@@ -27,15 +24,15 @@
       </MenuBar>
       <TextField fx:id="usernameTextField" layoutX="570.0" layoutY="127.0" />
       <TextField fx:id="passwordTextField" layoutX="570.0" layoutY="261.0" />
-      <CheckBox fx:id="passwordCheckBox" layoutX="719.0" layoutY="265.0" mnemonicParsing="false" text="Show Password?" />
+      <CheckBox fx:id="passwordCheckBox" layoutX="769.0" layoutY="265.0" mnemonicParsing="false" text="Show Password?" />
       <Label layoutX="503.0" layoutY="131.0" text="username" />
       <Label layoutX="503.0" layoutY="265.0" text="password" />
       <Button layoutX="574.0" layoutY="378.0" mnemonicParsing="false" onAction="#login" prefHeight="51.0" prefWidth="141.0" text="Login" />
       <PasswordField fx:id="passwordField" layoutX="570.0" layoutY="261.0" />
       <Label fx:id="errorLabel" layoutX="570.0" layoutY="320.0" prefHeight="17.0" prefWidth="149.0" />
-      <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="68.0" text="Back" />
+      <Button layoutX="14.0" layoutY="28.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="68.0" text="Back" />
       <Label layoutX="574.0" layoutY="474.0" prefHeight="17.0" prefWidth="81.0" text="didn't sign up?" />
-      <Hyperlink layoutX="655.0" layoutY="471.0" text="Buyer" onAction="#goToBuyerRegisterMenu" />
-      <Hyperlink layoutX="701.0" layoutY="471.0" text="Seller" onAction="#goToSellerRegisterMenu" />
+      <Hyperlink layoutX="655.0" layoutY="471.0" onAction="#goToBuyerRegisterMenu" text="Buyer" />
+      <Hyperlink layoutX="701.0" layoutY="471.0" onAction="#goToSellerRegisterMenu" text="Seller" />
    </children>
 </Pane>
